# cygwin-old

newlib/: Makefile.am  Makefile.in  Makefile.shared  list-chewed-but-not-included-files  list-marked-up-but-not-chewed  list-undocumented-symbols
newlib/doc/: Makefile.am  Makefile.in  chapter-texi2docbook.py
newlib/libc/: Makefile.am  Makefile.in  libc.in.xml  libc.texinfo
newlib/libc/argz/: Makefile.in
newlib/libc/ctype/: Makefile.in
newlib/libc/errno/: Makefile.in
newlib/libc/iconv/: Makefile.am  Makefile.in  iconv.xml
newlib/libc/iconv/ccs/: Makefile.in
newlib/libc/iconv/ccs/binary/: Makefile.in
newlib/libc/iconv/ces/: Makefile.in
newlib/libc/iconv/lib/: Makefile.in
newlib/libc/locale/: Makefile.in
newlib/libc/misc/: Makefile.in
newlib/libc/posix/: Makefile.in
newlib/libc/reent/: Makefile.in  reent.tex
newlib/libc/search/: Makefile.in
newlib/libc/signal/: Makefile.in
newlib/libc/stdio/: Makefile.in
newlib/libc/stdio64/: Makefile.in
newlib/libc/stdlib/: Makefile.in
newlib/libc/string/: Makefile.in
newlib/libc/syscalls/: Makefile.am  Makefile.in  syscalls.xml
newlib/libc/time/: Makefile.in
newlib/libc/unix/: Makefile.in
newlib/libc/xdr/: Makefile.in
newlib/libm/: Makefile.am  Makefile.in  libm.in.xml
newlib/libm/common/: Makefile.in
newlib/libm/complex/: Makefile.in
newlib/libm/math/: Makefile.in
newlib/libm/mathfp/: Makefile.in
winsup/: configure.ac
winsup/cygwin/: Makefile.in  context.cc  exception.h  exceptions.cc  external.cc  gendef
winsup/cygwin/include/cygwin/: wait.h
winsup/cygwin/include/sys/: cygwin.h  ucontext.h
winsup/doc/: ChangeLog  Makefile.in  faq-using.xml  utils.xml
winsup/man/: Makefile.in  api2man.pl  configure  configure.ac  intro.1  intro.3  newlibinfo2man.pl  utils2man.pl
winsup/utils/: ssp.c
