dnl Autoconf configure script for winsup/doc/man
dnl Copyright 2015 Red Hat, Inc.
dnl
dnl This file is part of Cygwin.
dnl
dnl This software is a copyrighted work licensed under the terms of the
dnl Cygwin license.  Please consult the file "CYGWIN_LICENSE" for
dnl details.

dnl Process this file with autoconf to produce a configure script.

AC_PREREQ([2.59])
AC_INIT([Cygwin Manpages], 0,
	cygwin@cygwin.com, cygwin, https://cygwin.com)
AC_CONFIG_AUX_DIR(../..)

. ${srcdir}/../configure.cygwin

AC_SUBST(winsup_srcdir)

AC_PROG_INSTALL
AC_NO_EXECUTABLES
AC_CANONICAL_SYSTEM

AC_OUTPUT(Makefile)
